<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.malik.doc4wheel.Customer.CustomerSettingsActivity"
    android:gravity="center">

    <android.support.constraint.ConstraintLayout
        android:padding="20sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:src="@mipmap/ic_default_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998" />


        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableLeft="@drawable/person_icon_black"
            android:drawablePadding="@dimen/icon_padding"
            android:paddingLeft="@dimen/icon_padding"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            app:layout_constraintStart_toStartOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/profileImage"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableLeft="@drawable/phone_icon_black"
            android:drawablePadding="@dimen/icon_padding"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:paddingLeft="@dimen/icon_padding"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@+id/mechanic_email"
            app:layout_constraintStart_toStartOf="@+id/mechanic_email"
            app:layout_constraintTop_toBottomOf="@+id/mechanic_email" />

        <EditText
            android:id="@+id/mechanic_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableLeft="@drawable/email_icon_black"
            android:drawablePadding="@dimen/icon_padding"
            android:hint="@string/email_hint"
            android:paddingLeft="@dimen/icon_padding"
            android:textSize="@dimen/text_size"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="0.0" />

        <co.ceryle.radiorealbutton.RadioRealButtonGroup
            android:id="@+id/radioRealButtonGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/phone"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintVertical_bias="0.0"
            app:rrbg_animateDrawables_enter="overshoot"
            app:rrbg_animateDrawables_enterDuration="500"
            app:rrbg_animateDrawables_exit="overshoot"
            app:rrbg_animateDrawables_exitDuration="500"
            app:rrbg_animateDrawables_scale="1.2"
            app:rrbg_animateTexts_enter="overshoot"
            app:rrbg_animateTexts_enterDuration="500"
            app:rrbg_backgroundColor="@android:color/transparent"
            app:rrbg_bottomLineColor="@color/colorAccent"
            app:rrbg_buttonsPaddingBottom="20sp"
            app:rrbg_buttonsPaddingTop="14dp"
            app:rrbg_selectorAboveOfBottomLine="false"
            app:rrbg_selectorColor="@color/backgroundColor"
            app:rrbg_selectorDividerPadding="20sp"
            app:rrbg_selectorSize="6dp"
            app:rrbg_selectorTop="false">

            <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@drawable/ic_uber_x"
                app:rrb_drawableGravity="top"
                app:rrb_drawableHeight="40dp"
                app:rrb_drawableWidth="40dp"
                app:rrb_rippleColor="@color/backgroundColor"
                app:rrb_text="@string/radio_button_text_mechanic"
                app:rrb_textColor="@color/backgroundColor"
                app:rrb_textSize="12sp" />

            <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@drawable/ic_uber_xl"
                app:rrb_drawableGravity="top"
                app:rrb_drawableHeight="40dp"
                app:rrb_drawableWidth="40dp"
                app:rrb_rippleColor="@color/backgroundColor"
                app:rrb_text="@string/radio_button_text_electration"
                app:rrb_textColor="@color/backgroundColor"
                app:rrb_textSize="12sp" />

            <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@drawable/ic_uber_black"
                app:rrb_drawableGravity="top"
                app:rrb_drawableHeight="40dp"
                app:rrb_drawableWidth="40dp"
                app:rrb_rippleColor="@color/backgroundColor"
                app:rrb_text="@string/radio_button_text_tyre_service"
                app:rrb_textColor="@color/backgroundColor"
                app:rrb_textSize="12sp" />
        </co.ceryle.radiorealbutton.RadioRealButtonGroup>

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="confirm"
            android:textAllCaps="false"
            android:textColor="@color/backgroundColor"
            app:layout_constraintEnd_toEndOf="@+id/radioRealButtonGroup"
            app:layout_constraintStart_toStartOf="@+id/radioRealButtonGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioRealButtonGroup" />

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/back_button_text"
            android:textAllCaps="false"
            android:textColor="@color/backgroundColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/confirm"
            app:layout_constraintStart_toStartOf="@+id/confirm"
            app:layout_constraintTop_toBottomOf="@+id/confirm" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
