<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/email_icon_black"
        android:drawablePadding="@dimen/icon_padding"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/icon_padding"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/password_icon_black"
        android:background="@drawable/rounded_edit_text"
        android:drawablePadding="@dimen/icon_padding"
        android:paddingLeft="@dimen/icon_padding"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/forgotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Forgot Password?"
        android:textColor="#ffffff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button_text"
        android:textColor="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="@color/whiteColor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>