<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/email_icon_black"
        android:drawablePadding="@dimen/icon_padding"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/icon_padding"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/password_icon_black"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        android:paddingLeft="@dimen/icon_padding"
        android:drawablePadding="@dimen/icon_padding"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />


    <co.ceryle.radiorealbutton.RadioRealButtonGroup
        android:id="@+id/radioRealButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.00999999"
        app:rrbg_animateDrawables_enter="overshoot"
        app:rrbg_animateDrawables_enterDuration="500"
        app:rrbg_animateDrawables_exit="overshoot"
        app:rrbg_animateDrawables_exitDuration="500"
        app:rrbg_animateDrawables_scale="1.2"
        app:rrbg_animateTexts_enter="overshoot"
        app:rrbg_animateTexts_enterDuration="500"
        app:rrbg_backgroundColor="@android:color/transparent"
        app:rrbg_bottomLineColor="@color/colorAccent"
        app:rrbg_buttonsPaddingBottom="20sp"
        app:rrbg_buttonsPaddingTop="14dp"
        app:rrbg_selectorAboveOfBottomLine="false"
        app:rrbg_selectorColor="@color/backgroundColor"
        app:rrbg_selectorDividerPadding="20sp"
        app:rrbg_selectorSize="6dp"
        app:rrbg_selectorTop="false">

        <co.ceryle.radiorealbutton.RadioRealButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/person_icon_black"
            app:rrb_drawableGravity="top"
            app:rrb_drawableHeight="40dp"
            app:rrb_drawableWidth="40dp"
            app:rrb_rippleColor="@color/backgroundColor"
            app:rrb_text="Customer"
            app:rrb_textColor="@color/backgroundColor"
            app:rrb_textSize="12sp" />

        <co.ceryle.radiorealbutton.RadioRealButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/ic_build_black_24dp"
            app:rrb_drawableGravity="top"
            app:rrb_drawableHeight="40dp"
            app:rrb_drawableWidth="40dp"
            app:rrb_rippleColor="@color/backgroundColor"
            app:rrb_text="Mechanic"
            app:rrb_textColor="@color/backgroundColor"
            app:rrb_textSize="12sp" />
    </co.ceryle.radiorealbutton.RadioRealButtonGroup>

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_button_text"
        android:textAllCaps="false"
        android:textColor="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioRealButtonGroup"
        app:layout_constraintStart_toStartOf="@+id/radioRealButtonGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioRealButtonGroup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="@color/whiteColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register"
        app:layout_constraintStart_toStartOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>